--- a/demo/src/workflow-build-java.yaml
+++ b/demo/src/workflow-build-java.yaml
@@ -142,22 +142,22 @@ spec:
                   value: "{{=jsonpath(workflow.parameters['image-config'], '$.repository')}}"
                 - name: severity
                   value: "{{=jsonpath(workflow.parameters['vulnerability-scan-config'], '$.fail.severity')}}"
-#          - name: retag-container-image
-#            depends: "container-security-error-build"
-#            templateRef:
-#              name: containerimage-operations
-#              template: retag-container-image
-#              clusterScope: true
-#            arguments:
-#              parameters:
-#                - name: old-tag
-#                  value: "{{ workflow.parameters.commit-hash }}-to-scan"
-#                - name: new-tag
-#                  value: "{{ workflow.parameters.commit-hash }}"
-#                - name: registry
-#                  value: "{{=jsonpath(workflow.parameters['image-config'], '$.registry')}}"
-#                - name: repository
-#                  value: "{{=jsonpath(workflow.parameters['image-config'], '$.repository')}}"
+          - name: retag-container-image
+            depends: "container-security-error-build"
+            templateRef:
+              name: containerimage-operations
+              template: retag-container-image
+              clusterScope: true
+            arguments:
+              parameters:
+                - name: old-tag
+                  value: "{{ workflow.parameters.commit-hash }}-to-scan"
+                - name: new-tag
+                  value: "{{ workflow.parameters.commit-hash }}"
+                - name: registry
+                  value: "{{=jsonpath(workflow.parameters['image-config'], '$.registry')}}"
+                - name: repository
+                  value: "{{=jsonpath(workflow.parameters['image-config'], '$.repository')}}"
           - name: update-argocd-application
             depends: "build-and-push-image"
 #            when: "{{ workflow.parameters.branch }} == 'main'"
@@ -178,13 +178,80 @@ spec:
           - name: integration-test
             depends: "synchronize-argocd-application"
             when: "{{ workflow.parameters.integration-test-active }}"
-            templateRef:
-              name: integration-test-{{ workflow.parameters.integration-test-type }}-operations
-              template: integration-test
-              clusterScope: true
-            arguments:
+            metadata:
+              labels:
+                template: integration-test
+            inputs:
               parameters:
-                - name: "config"
-                  value: "{{ workflow.parameters.integration-test-config }}"
+                - name: config
+            dag:
+              tasks:
+                - name: wait-for-deployment
+                  templateRef:
+                    name: k8s-operations
+                    template: wait-for-deployment
+                    clusterScope: true
+                  inputs:
+                    parameters:
+                      - name: registry
+                      - name: repository
+                  arguments:
+                    parameters:
+                      - name: application
+                        value: "{{ workflow.parameters.reponame }}-{{ workflow.parameters.environment }}"
+                      - name: namespace
+                        value: "{{ workflow.parameters.reponame }}-{{ workflow.parameters.environment }}"
+                      - name: image
+                        value: "{{=jsonpath(workflow.parameters['image-config'], '$.registry') }}/{{=jsonpath(workflow.parameters['image-config'], '$.repository') }}/{{ workflow.parameters.reponame }}:{{ workflow.parameters.commit-hash }}"
+                - name: integration-test
+                  depends: "wait-for-deployment"
+                  template: run-newman-tests
+                  arguments:
+                    parameters:
+                      - name: namespace
+                        value: "{{ workflow.parameters.reponame }}-{{ workflow.parameters.environment }}"
+                      - name: application
+                        value: "{{ workflow.parameters.reponame }}-{{ workflow.parameters.environment }}"
+                      - name: collectionpath
+                        value: "{{=jsonpath(inputs.parameters.config, '$.collection-path') }}"
+                      - name: collection
+                        value: "{{=jsonpath(inputs.parameters.config, '$.collection') }}"
+                      - name: port
+                        value: "{{=jsonpath(inputs.parameters.config, '$.port') }}"
+          - name: run-newman-tests
+            metadata:
+              labels:
+                template: run-newman-tests
+            inputs:
+              parameters:
+                - name: collectionpath
+                - name: collection
+                - name: port
+                - name: application
+                - name: namespace
+            outputs:
+              artifacts:
+                - name: postman-report
+                  path: "/mnt/out/{{ workflow.parameters.reponame }}-junit.html"
+                  s3:
+                    key: "postman-{{ workflow.parameters.reponame }}/postman-{{ workflow.parameters.reponame }}-{{ workflow.parameters.commit-hash }}.html"
+                  archive:
+                    none: { }
+            container:
+              name: newman
+              image: ghcr.io/gepaplexx/newman:latest
+              command:
+                - sh
+                - -c
+              args:
+                - >-
+                  newman run 
+                  --env-var hostname=http://{{inputs.parameters.application}}.{{inputs.parameters.namespace}}.svc.cluster.local:{{inputs.parameters.port}}
+                  --reporters cli,junit,htmlextra
+                  --reporter-htmlextra-export /mnt/out/{{ workflow.parameters.reponame }}-junit.html
+                  /mnt/out/{{ workflow.parameters.reponame }}/{{ inputs.parameters.collectionpath }}/{{ inputs.parameters.collection }}
+              volumeMounts:
+                - name: workspace
+                  mountPath: /mnt/out/
 
 
